@@ -47,6 +47,9 @@ If I've forgotton anyone, please let me know.
 
 Thanks also to Stanford University and Penguin Computing.
 
+Contributors should appraise themselves of the document at
+http://www.padl.com/Articles/GuidelinesforContributing.html.
+
 -- 
 Luke Howard
 lukeh@padl.com
